banner section web with mobile and tablet responsive complete

--- a/index.html
+++ b/index.html
@@ -34,20 +34,23 @@
       <h1 class="banner-title">Explore Your Travel</h1>
       <p class="banner-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
     </div>
-    <div class="banner-input-field">
-      <input type="text" placeholder="Where go">
-      <select>
-        <option value="" disabled>When</option>
-        <option value="">Delli</option>
-        <option value="">Pune</option>
-      </select>
-      <select>
-        <option value="" disabled>Select type</option>
-        <option value="">Day</option>
-        <option value="">Night</option>
-      </select>
-      <button class="btn"><i class="fa-solid fa-magnifying-glass"></i>
-        Find Now</button>
+    <div class="input-div">
+      <div class="banner-input-field">
+        <input type="text" placeholder="Where go">
+        <select>
+          <option value="" disabled>When</option>
+          <option value="">Delli</option>
+          <option value="">Pune</option>
+        </select>
+        <select>
+          <option value="" disabled>Select type</option>
+          <option value="">Day</option>
+          <option value="">Night</option>
+        </select>
+        <button> <i class="fa-solid fa-magnifying-glass"></i>
+          Find Now
+          </button>
+      </div>
     </div>
    </section>
    <!-- banner section end -->
