travel popular section complete

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
     <li><a href="#">Blog</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
+  <!-- <div class="bar"><i class="fa-solid fa-bars"></i></div> -->
   </div>
+  
 </nav>
+
 <!-- navbar end -->
   </header>
   <main>
@@ -54,6 +57,26 @@
     </div>
    </section>
    <!-- banner section end -->
+   <!-- our popular tour start -->
+  <section class="popular-container">
+    <div class="popular-content">
+      <h1 class="title">Our Popular Tours</h1>
+      <p class="p-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+      <ul class="p-li-content">
+        <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+        <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+        <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+      </ul>
+      <p>Amet consectetur. Vulputate commodo felis molestie risus 
+        ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+        <button>Read More</button>
+    </div>
+    <div class="popular-image">
+      <img src="Images/Rectangle 4.png" alt="">
+    </div>
+    
+  </section>
+   <!-- our popular tour ends -->
   </main>
   <footer>
 
