destination section complete with responsive

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <option value="">Day</option>
           <option value="">Night</option>
         </select>
-        <button> <i class="fa-solid fa-magnifying-glass"></i>
+        <button id="find-now"> <i class="fa-solid fa-magnifying-glass"></i>
           Find Now
           </button>
       </div>
@@ -77,6 +77,49 @@
     
   </section>
    <!-- our popular tour ends -->
+   <section class="destination-container">
+    <div class="destination-content">
+      <h1 class="content-title">Choose Your Destination</h1>
+      <p class="content-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.
+
+      </p>
+    </div>
+    <div class="destination-row-1">
+      <div class="image-item1">
+        <h5 class="img-title">Maldives</h5>
+        <img src="Images/maldip.png" alt="">
+      </div>
+      <div class="image-item1">
+        <h5 class="img-title">indonesia</h5>
+        <img src="Images/indonesia.png" alt="">
+      </div>
+    </div>
+    <div class="destination-row-2">
+      <div class="image-item2">
+        <h5 class="img-title">Srilanka</h5>
+        <img src="Images/srilanka.png" alt="">
+      </div>
+      <div class="image-item2">
+        <h5 class="img-title">North America</h5>
+        <img src="Images/north-america.png" alt="">
+      </div>
+      <div class="image-item2">
+        <h5 class="img-title">Kashmir</h5>
+        <img src="Images/kashmir.png" alt="">
+      </div>
+    </div>
+    <div class="destination-row-3">
+      <div class="image-item6">
+        <h5 class="img-title0">Bangladesh</h5>
+        <img src="Images/bengladesh.png" alt="">
+      </div>
+      <div class="image-item7">
+        <h5 class="img-title0">Bandarban</h5>
+        <img src="Images/bandorban.png" alt="">
+      </div>
+    </div>
+
+   </section>
   </main>
   <footer>
 
