why choose ud section complete

--- a/index.html
+++ b/index.html
@@ -120,6 +120,37 @@
     </div>
 
    </section>
+   <!-- why choose us section start -->
+   <section class="why-container">
+    <h2 class="why-title">Why Choose Us</h2>
+    <p class="why-desc">
+      Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+    </p>
+    <div class="main-content">
+      <div class="hotel-content">
+        <img src="Images/hotel.svg" alt="">
+        <h4 class="content-title">
+         Handpicked Hotels
+        </h4>
+        <p class="content-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+       </div>
+       <div class="hotel-service">
+        <img src="Images/map.svg" width="70" height="70" alt="">
+        <h4 class="hotel-title content-title">
+         Handpicked Hotels
+        </h4>
+        <p class="hotel-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+       </div>
+    </div>
+    <div class="best-price">
+      <img src="Images/sale.svg" alt="">
+      <h3 class="price-title">Best Price Guarantee</h3>
+      <p class="price-desc">
+        Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. 
+      </p>
+    </div>
+   </section>
+   <!-- why choose us section end -->
   </main>
   <footer>
 
